# RustLearn

./: Cargo.toml  README.md
branches/: Cargo.toml
branches/src/: main.rs
coding_activities/: Cargo.toml
coding_activities/src/: if_&else.rs  main.rs
control_flow/: Cargo.toml
control_flow/src/: control_flow  main.rs
data_structure/src/: main.rs
data_types/: types  types.rs
enums/: Cargo.toml
enums/src/: enums  main.rs
functions/: Cargo.toml
functions/src/: functions  main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
loops/: Cargo.toml
loops/src/: loops  main.rs
match_basics/: Cargo.toml
match_basics/src/: main.rs  match
ownership/: Cargo.toml
ownership/src/: main.rs
parameters/: Cargo.toml
parameters/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs  structs
tuples/: Cargo.toml
tuples/src/: main.rs  tuples
variables/: Cargo.toml
variables/src/: main.rs  variables
